Fix rp save (#600)
* 583 fix sidebar scrollbar bugs (#590)

* fixed scrollbar of routePathInfoTab & routePathLinkTab

* fixed scrollbar of /routes/ page

* fixed scrollbar at nodeView

* renaming, routeShow -> routeItem, routesList -> routeList

* fixed sticky save button

* made routePath save button to work

* hasUnsavedModifications -> isDirty, setRoutePath(null) -> clear(), throwing error if route or routePath not found

* Fixed form validations

* removed String(value)

* PR fixes

--- a/src/components/sidebar/networkView/networkView.scss
+++ b/src/components/sidebar/networkView/networkView.scss
@@ -1,4 +1,4 @@
 .networkView {
     width: 500px;
-    overflow: scroll;
+    overflow-y: auto;
 }
