--- a/src/components/sidebar/routePathView/routePathInfoTab/routePathInfoTab.scss
+++ b/src/components/sidebar/routePathView/routePathInfoTab/routePathInfoTab.scss
@@ -2,13 +2,13 @@
 @import '../../../shared/styles/flexbox';
 @import '../../../shared/styles/form';
 
-.routePathTab {
+.routePathInfoTabView {
     display: flex;
     flex-direction: column;
+    overflow-y: auto;
 
     .content {
         padding: 15px 15px 45px 15px;
-        overflow: auto;
 
         .staticInfo {
             margin-top: 5px;
@@ -16,19 +16,19 @@
             margin-right: 10px;
             font-weight: bold;
         }
-    
+
         .routePathTabActions {
             overflow: auto;
             display: flex;
             width: 100%;
-    
+
             div {
                 font-size: 18px;
                 flex-grow: 1;
                 width: 49%;
                 display: inline-block;
                 box-sizing: border-box;
-    
+
                 svg {
                     margin-right: 10px;
                 }
